2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support hiding enums

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.6 release

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add bindings for GLib testing framework,
	  fixes bug 510574

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: add support for common_prefix
	  attribute to override prefix of enum values

	* vapi/packages/gdk-2.0/: fix GdkWindowClass binding,
	  fixes bug 509967

	* vapi/gdk-2.0.vapi: regenerated

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtksourceview-2.0/: update to gtksourceview 2.1.0

	* vapi/gtksourceview-2.0.vapi: regenerated

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libgnomeui-2.0/: update to libgnomeui 2.21.5

	* vapi/libgnomeui-2.0.vapi: regenerated

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: update to glib 2.15.2

	* vapi/gio-2.0.vapi: regenerated

2008-01-19  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala, vala/valasemanticanalyzer.vala: VAPI
	  classes don't specify overridden methods or properties, fix generic
	  type argument tracing to use the same algorithm as inherited symbol
	  lookup

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidlparser.c,
	  gobject-introspection/scannerlexer.l,
	  gobject-introspection/scannerparser.y: support C99 _Bool type

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support nested generic types, fixes bug 443522

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vala/valavoidtype.vala: implement get_cname method

	* gobject/valaccodegenerator.vala: cast function pointers to callback
	  type, fixes bug 510262

2008-01-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix memory leaks in g_file_new_for_* binding,
	  fixes bug 509884
